--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,10 +4,10 @@ on:
   push:
 
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   test_build:
